# sagi-workspace

./: .cursorrules  README.md  pyproject.toml
howto/cursor/: spellcheck.md
journal/: current.md
misc/aws-costs/: questions.md
misc/java/: interesting.md
projects/modern-tree/: README.md  name-suggestions.md
projects/modern-tree/analysis/: README.md
projects/modern-tree/treeprocessor-online/: Database_to_SearchableIndividual_Relationship_Pipeline.md  Individual_Level_Processing_Proposal.md  TreeProcessor_Relationship_Path_Extension_Proposal.md
